✨ add scrollbars and fix overflows

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,29 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* Custom Scrollbar */
+
+/* width */
+.scrollbar ::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+  cursor: pointer;
+}
+
+/* Track */
+.scrollbar ::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+
+/* Handle */
+.scrollbar ::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+.scrollbar ::-webkit-scrollbar-thumb:hover {
+  background: rgba(0, 0, 0);
+}
